# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import invoicesRouter from "./invoices";
+import ocrRouter from "./ocr";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(invoicesRouter);
+router.use(ocrRouter);
 
 export default router;
